# traffic_counter

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci-higresss.yml  ci.yml  publish-higress-image.yml  publish-image.yml  release.yml
deploy/k8s/: configmap.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml
openspec/: project.md
openspec/changes/add-ebpf-traffic-counting/: design.md  tasks.md
openspec/changes/archive/2025-12-12-add-ebpf-traffic-counting/: applied.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-12-add-ebpf-traffic-counting/specs/traffic/: spec.md
openspec/changes/refactor-packet-socket-filter/: design.md  proposal.md  tasks.md
openspec/changes/refactor-packet-socket-filter/specs/traffic/: spec.md
openspec/specs/traffic/: spec.md
providers/higress/: Cargo.toml  Dockerfile  Dockerfile.builder  Makefile
providers/higress/src/: lib.rs
scripts/: build-ebpf.sh  check-deps.sh
traffic-counter/: Cargo.toml  build.rs
traffic-counter-common/: Cargo.toml
traffic-counter-common/src/: lib.rs
traffic-counter-ebpf/: Cargo.toml
traffic-counter-ebpf/contrib/: xdp_traffic_counter.c
traffic-counter-ebpf/src/: main.rs  maps.rs
traffic-counter/src/: ebpf_loader.rs  main.rs  model.rs  node.rs  store.rs
