[package]
name = "traffic-counter"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
aya = { workspace = true }
anyhow = { workspace = true, default-features = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
traffic-counter-common = { workspace = true, features = ["user"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

[[bin]]
name = "traffic-counter"
path = "src/main.rs"