[package]
name = "higress"
version = "0.0.0-alpha"
edition  = "2024"

[dependencies]
higress-wasm-rust = { path = "vendor/higress-wasm-rust" }
multimap = "0.10.1"
proxy-wasm = { git="https://github.com/higress-group/proxy-wasm-rust-sdk", branch="main", version="0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prefix-trie = "0.8.1"
ipnet = "2.11.0"

[lib]
crate-type = ["cdylib"]